--- a/sources/frontend/index.html
+++ b/sources/frontend/index.html
@@ -51,6 +51,7 @@
 <script src="components/tabs-content/TabInitialization.js"></script>
 <script src="components/tabs-content/TabCalibration.js"></script>
 <script src="components/tabs-content/TabDistortion.js"></script>
+<script src="components/tabs-content/TabDepth.js"></script>
 
 
 <script src="Layout/MainLayout.js"></script>
@@ -66,11 +67,8 @@
 <script src="components/containers/body/TabsContent.js"></script>
 
 
-<script src="components/widgets/Loader.js"></script>
-<script src="components/VideosContainer.js"></script>
+<!--<script src="components/widgets/Loader.js"></script>-->
 
-<script src="components/StereoBase.js"></script>
-<script src="components/StereoCalibration.js"></script>
 <script>
   new Vue({
     el: '#app',
