distance from disparity

--- a/sources/frontend/index.html
+++ b/sources/frontend/index.html
@@ -3,7 +3,9 @@
 <head>
   <title>Eel Demo</title>
   <script type='text/javascript' src='/eel.js'></script>
+
   <link rel="stylesheet" type="text/css" href="static/css/theme/bulma.css"/>
+  <link rel="stylesheet" type="text/css" href="static/css/theme/slider.css"/>
 
   <link rel="stylesheet" type="text/css" href="static/css/sections/header.css"/>
   <link rel="stylesheet" type="text/css" href="static/css/sections/body.css"/>
@@ -45,6 +47,7 @@
 
 <script src="components/widgets/VideoPlayer.js"></script>
 <script src="components/widgets/PlayerControl.js"></script>
+<script src="components/tabs-content/depth-modes/DepthRadioInput.js"></script>
 
 
 <script src="components/tabs-content/BaseTabContent.js"></script>
