fix calibration data loading issue

--- a/sources/gui/index.html
+++ b/sources/gui/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <title>Eel Demo</title>
-  <script type='text/javascript' src='/eel.js'></script>
+  <script src='/eel.js' type='text/javascript'></script>
 
-  <link rel="stylesheet" type="text/css" href="static/css/theme/bulma.css"/>
-  <link rel="stylesheet" type="text/css" href="static/css/theme/slider.css"/>
+  <link href="static/css/theme/bulma.css" rel="stylesheet" type="text/css"/>
+  <link href="static/css/theme/slider.css" rel="stylesheet" type="text/css"/>
 
-  <link rel="stylesheet" type="text/css" href="static/css/sections/header.css"/>
-  <link rel="stylesheet" type="text/css" href="static/css/sections/body.css"/>
-  <link rel="stylesheet" type="text/css" href="static/css/sections/footer.css"/>
-  <link rel="stylesheet" type="text/css" href="static/css/sections/layout.css"/>
+  <link href="static/css/sections/header.css" rel="stylesheet" type="text/css"/>
+  <link href="static/css/sections/body.css" rel="stylesheet" type="text/css"/>
+  <link href="static/css/sections/footer.css" rel="stylesheet" type="text/css"/>
+  <link href="static/css/sections/layout.css" rel="stylesheet" type="text/css"/>
 
-  <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
-<!--  <link rel="stylesheet" type="text/css" href="static/css/debug.css"/>-->
+  <link href="static/css/main.css" rel="stylesheet" type="text/css"/>
+  <!--  <link rel="stylesheet" type="text/css" href="static/css/debug.css"/>-->
 
   <script src="static/vue.js"></script>
 
@@ -23,17 +23,17 @@
 <div id="app">
 
   <main-layout/>
-<!--  <section class="maint-title">-->
-<!--    <h1 class="subtitle">Stereo<strong>vision</strong></h1>-->
-<!--  </section>-->
+  <!--  <section class="maint-title">-->
+  <!--    <h1 class="subtitle">Stereo<strong>vision</strong></h1>-->
+  <!--  </section>-->
 
-<!--  <section class="content-wrapper">-->
+  <!--  <section class="content-wrapper">-->
 
-<!--    <div class="tabs-wrapper">-->
-<!--      <tabs/>-->
-<!--    </div>-->
+  <!--    <div class="tabs-wrapper">-->
+  <!--      <tabs/>-->
+  <!--    </div>-->
 
-<!--  </section>-->
+  <!--  </section>-->
 
 
 </div>
